ingressgke/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /courseservice
            pathType: Prefix
            backend:
              service:
                name: courseservice
                port:
                  number: 80
          - path: /faqservice
            pathType: Prefix
            backend:
              service:
                name: faqservice
                port:
                  number: 80
          - path: /userservice
            pathType: Prefix
            backend:
              service:
                name: userservice
                port:
                  number: 80
